  * DataType ENUM : stored as 1,2,4 byte ints, map to Strings
  * DataType OPAQUE : byte[] cant be subsetted.
  * DataType SEQUENCE : Structure(*) only accessible through StructureDataIterator

 Features:
  netcdf
    * Structure.select(): create subset consisting only of selected member variables
    * StructureDS correctly gets enhanced
  iosp
   * netcdf-4
   * complete HDF5 access
   * complete HDF4 access
   * parsing of HDF-EOS/HDF5-EOS metadata to identify dimensions.
   * GEMPAK grids
   * NMC Office Note 29/143
   * BUFR (edition 3) mostly works
  geoloc
   * Add RotatedPole projection
  ft
   * Point Feature Types completely reworked, based on StructureData iterators
  NcML
   * Tiled aggregation
   * Existing accepts timeUnitsChange
   * Union accepts scan

 Libraries
  * JDOM 1.1
  * use new visad library 12/04/07

 Release Details:
    17: HTTPRandomAccessFile allows content-length to be long
        fix NcML aggregation unit tests; add new ones
        integrate aggregation with FileCache, experimental concurrency
        fix bug with relative URLs with blanks in them (URLnaming)
        finish new agg features : promoteGlobalAttribute, timeUnitsChange
    16: remove direct use of ucar.units, except from ucar.nc2.units
        rewrite NetcdfFileCache, remove NetcdfDatasetCache
        EnhanceScaleMissingImpl uses Misc.closeEnough for missing value comparisions.
        default VariableDS.useNaNs = true
        ucar.nc2.util.cache.FileCache uses FileCacheable, FileFactory interfaces;
            implement NetcdfFileCache, HTTP file cache with FileCache.
        start adding net.jcip.annotations to document thread safetyAgg
        convertScaleOffsetMissing() methods back into VariableEnhanced
        clean up Aggregation, make sure docs are correct
        clean up NetcdfDataset.EnhanceMode, add deferred option
    15: change StringBuffer to StringBuilder for efficiency
        clean up ArrayStructure/StructureData API, clarify Member use